--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon main"
+    "start": "nodemon main",
+    "init-db": "node src/database/init.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "sqlite": "^4.0.21",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
