--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
-    "start": "nodemon main",
+    "dev": "nodemon main",
     "init-db": "node src/database/init.js"
   },
   "keywords": [],
